showpage map alignment fixed

--- a/app/assets/stylesheets/tools/_show.scss
+++ b/app/assets/stylesheets/tools/_show.scss
@@ -8,9 +8,19 @@ h1 {
   border-bottom: lightgrey 1px solid;
 }
 
+.second-container {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
 .show-item-container {
-  width: 60%;
+  width: 100%;
   margin-bottom: 60px;
+
+  display: flex;
+  }
+
+.tool-show-card{
   h2 {
     font-weight: bold;
     margin: 24px 0;
@@ -22,24 +32,21 @@ h1 {
     margin: 24px 0;
     .price {
         display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
         position: relative;
     }
   }
 }
 
 .btn-primary-booking {
-  position: absolute;
-  top: -10%;
-  left: 25%;
   padding: 5px;
   width: 150px;
   background-color: #E6B831;
   border-color: #E6B831;
   border-radius: 5px;
   color: white;
-
 }
 
 .btn-primary-booking:hover {
@@ -47,4 +54,8 @@ h1 {
   background-color: black;
   border-color: black;
   box-shadow: 0 8px 16px 0 #E6B831;
+}
+
+#map {
+  margin-left: 20px;
 }
